FIx width overflow on add_chocolate

--- a/backend/public/static/css/add_chocolate.css
+++ b/backend/public/static/css/add_chocolate.css
@@ -46,3 +46,9 @@ form[action='/api/chocolates/add'] {
 .form_input[type='submit']:hover {
   background-color: #42d1f5;
 }
+
+@media (max-width: 600px) {
+  .form_input {
+    min-width: 80vw;
+  }
+}
